centos-ansible-k8s-1.15.10/3_stateful_application/rabbitmq/rabbitmq-management-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rabbitmq-management
  # annotations:
  #   kubernetes.io/ingress.class: traefik
spec:

  rules:
  - host: rabbitmq.shaun.io
    http:
      paths:
      - path: /
        backend:
          serviceName: rabbitmq-ha
          servicePort: http
